--- a/estimators.ipynb
+++ b/estimators.ipynb
@@ -1,5 +1,36 @@
 {
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "z\n"
+     ]
+    }
+   ],
+   "source": [
+    "import matplotlib.pyplot as plt \n",
+    "import seaborn as sns\n",
+    "import pandas as pd\n",
+    "import numpy as np \n",
+    "import scipy \n",
+    "import csv \n",
+    "import sklearn\n",
+    "print('z')\n"
+   ]
+  }
+ ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
@@ -10,27 +41,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": 3
-  },
-  "orig_nbformat": 2
+   "version": "3.8.5"
+  }
  },
  "nbformat": 4,
- "nbformat_minor": 2,
- "cells": [
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import matplotlib.pyplot as plt \n",
-    "import seaborn as sns\n",
-    "import pandas as pd\n",
-    "import numpy as np \n",
-    "import scipy \n",
-    "import csv \n",
-    "import sklearn.\n"
-   ]
-  }
- ]
+ "nbformat_minor": 2
 }
