--- a/estimators.ipynb
+++ b/estimators.ipynb
@@ -4,32 +4,28 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "z\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import matplotlib.pyplot as plt \n",
-    "import seaborn as sns\n",
+    "\n",
     "import pandas as pd\n",
     "import numpy as np \n",
     "import scipy \n",
     "import csv \n",
-    "import sklearn\n",
-    "print('z')\n"
+    "import sklearn\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "python394jvsc74a57bd0588b1dd76ca082666fe2f995fff1e9efb2de790f2352d1450e516a9edc988200",
+   "display_name": "Python 3.9.4 64-bit"
   },
   "language_info": {
    "codemirror_mode": {
@@ -41,7 +37,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.4"
+  },
+  "metadata": {
+   "interpreter": {
+    "hash": "588b1dd76ca082666fe2f995fff1e9efb2de790f2352d1450e516a9edc988200"
+   }
   }
  },
  "nbformat": 4,
